updating documentation and adding support for experimental features